[gd_scene load_steps=4 format=3 uid="uid://b82gg0yds1jf3"]

[ext_resource type="Script" uid="uid://rdobudl2cjk6" path="res://objects/object_display.gd" id="1_a6ref"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nvovq"]
albedo_color = Color(0.270222, 0.270222, 0.270222, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a6ref"]
albedo_color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="ObjectDisplay" type="Node3D"]
script = ExtResource("1_a6ref")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49321, 0, 0)
size = Vector3(0.1, 1.685, 0.1)
material = SubResource("StandardMaterial3D_nvovq")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.493, 0, 0)
size = Vector3(0.1, 1.685, 0.1)
material = SubResource("StandardMaterial3D_nvovq")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0154376)
size = Vector3(3, 1.685, 0.1)
material = SubResource("StandardMaterial3D_a6ref")

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1.02365, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.823465, 0)
size = Vector3(3, 0.1, 0.1)
material = SubResource("StandardMaterial3D_nvovq")

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(1.02365, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.823, 0)
size = Vector3(3, 0.1, 0.1)
material = SubResource("StandardMaterial3D_nvovq")

[node name="SmallLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.32932, 0.787296, 0.0670567)
pixel_size = 0.0075
outline_modulate = Color(0, 0, 0, 0)
text = "Push the STOP
button if you're
there..."
font_size = 48
horizontal_alignment = 0
vertical_alignment = 0
justification_flags = 0

[node name="BigLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0670567)
outline_modulate = Color(0, 0, 0, 0)
text = "30.00"
font_size = 128
